--- a/hello6.adoc
+++ b/hello6.adoc
@@ -5,6 +5,6 @@ Anton Podviaznikov <anton@podviaznikov.com>
 :docdate: 2017-11-25
 :nofooter:
 :document_type: writing
-:tags: ""
+:tags: "abc, books"
 
 abbbmm35
