--- a/content/writings/abc55.adoc
+++ b/content/writings/abc55.adoc
@@ -4,6 +4,8 @@ description: Abcd
 date: 2017-12-15T20:05:27-08:00
 draft: false
 menu: "writings"
+acknowledgement: Joseph Campbell
+tags: books, data, love
 ---
 
 = abc55
@@ -13,6 +15,6 @@ Anton Podviaznikov <anton@podviaznikov.com>
 :docdate: 2017-11-11
 :nofooter:
 :document_type: writing
-:tags: "books, data"
+:tags: "books, data, love"
 
 111
