--- a/content/writings/abc55.adoc
+++ b/content/writings/abc55.adoc
@@ -1,11 +1,11 @@
 ---
-title: abc55
-description: Abcd
+title: "abc55"
+description: "Abcde"
 date: 2017-12-15T20:05:27-08:00
 draft: false
 menu: "writings"
-acknowledgement: Joseph Campbell
-tags: books, data, love
+acknowledgement: "Joseph Campbell"
+tags: [books" , "data" , "love]
 ---
 
 = abc55
